--- a/components/x-pannel.html
+++ b/components/x-pannel.html
@@ -1,5 +1,5 @@
 <element name="x-pannel" attributes="title">
-	<template>
+	<template>	
 		<content></content>
 	</template>
   <script>
@@ -18,6 +18,17 @@
 
 			/*focus management*/
 			this.focusAbleContainer = this;	
+		},
+		hide: function (){
+			console.log('hiding', this);
+			this.setAttribute("display", "none");
+			this.setAttribute("overflow", "hidden");
+			this.setAttribute("width", "0px");
+			this.setAttribute("height", "0px");
+		},
+		show: function (){
+			console.log('showing', this);
+			this.setAttribute("display", "initial");
 		},
  
 		/*focus management*/
