--- a/components/x-vettore.html
+++ b/components/x-vettore.html
@@ -44,11 +44,29 @@
 						console.log('Non trovato: '+this._type+' = '+this.value);
 					}
 				});				
-			}
+			},
+			
+			//manage keyboard events
+			$(this).keydown(function(event) {
+				switch (event.which){
+					case 13:
+						return this.focusNext();
+					default: console.log(event.which);
+				}
+			});
+			/*focus management*/
+			this.focusAbleContainer = this.webkitShadowRoot;
 		},
+/*
 		focus: function (){
 			this.webkitShadowRoot.querySelector('x-vettorecodice').focus();
 		}
+*/
+		/*focus management*/
+		focusedID: -1,
+		focus: focus,
+		focusNext: focusNext,
+		getFocusAble : getFocusAble,
 	});
 	</script>
 </element>
