--- a/components/x-pesonetto.html
+++ b/components/x-pesonetto.html
@@ -6,7 +6,7 @@
 	Polymer.register(this, {
 		value: '',
 		focus: function (){
-			this.webkitShadowRoot.querySelector('input').focus();
+			this.webkitShadowRoot.querySelector('x-numero').focus();
 		}
 	});
 	</script>
