--- a/components/x-tara.html
+++ b/components/x-tara.html
@@ -5,6 +5,9 @@
 	<script>
 	Polymer.register(this, {
 		value: '',
+		focus: function (){
+			this.webkitShadowRoot.querySelector('x-numero').focus();
+		}
 	});
 	</script>
 </element>
