--- a/components/x-fornitore-codice.html
+++ b/components/x-fornitore-codice.html
@@ -1,13 +1,13 @@
-<element name="x-fornitore-codice" attributes="value">
+<polymer-element name="x-fornitore-codice" attributes="value">
 	<template>
 		<input type="text" value="{{value}}"  maxlength="5" size="5">
 	</template>
 	<script>
-	Polymer.register(this, {
+	Polymer('x-fornitore-codice', {
 		value: '',
 		focus: function (){
 			this.webkitShadowRoot.querySelector('input').focus();
 		}
 	});
 	</script>
-</element>
+</polymer-element>
