--- a/components/x-menuitem.html
+++ b/components/x-menuitem.html
@@ -1,4 +1,4 @@
-<element name="x-menuitem" attributes="action">
+<polymer-element name="x-menuitem" attributes="action">
 	<template>
 		<style>
 		  .menuitem {
@@ -17,8 +17,8 @@
 
 	</template>
 	<script>
-	Polymer.register(this, {
+	Polymer('x-menuitem', {
 	  action: ''
 	});
 	</script>
-</element>
+</polymer-element>
