--- a/components/x-numero.html
+++ b/components/x-numero.html
@@ -1,4 +1,4 @@
-<element name="x-numero" attributes="decimali interi totalecaratteri label value">
+<polymer-element name="x-numero" attributes="decimali interi totalecaratteri label value">
 	<template>
 	<label>
 		{{label}}
@@ -6,13 +6,13 @@
 	</label>
 	</template>
 	<script>
-	Polymer.register(this, {
+	Polymer('x-numero', {
 		decimali: 0,
 		interi: 8,
 		totalecaratteri:0,
 		label:'',
 		//value:'',
-		ready: function (){
+		created: function (){
 			this.tabIndex = 0;
 			if(this.decimali>0){var virgola=1;}else{var virgola=0;}
 			this.totalecaratteri = this.interi+virgola+this.decimali;
@@ -23,6 +23,6 @@
 		}
 	});
 	</script>
-</element>
+</polymer-element>
 
 
