--- a/components/x-righe.html
+++ b/components/x-righe.html
@@ -1,9 +1,9 @@
-<element name="x-righe" attributes="value">
+<polymer-element name="x-righe" attributes="value">
 	<template>
 		<!--<x-riga></x-riga>-->
 	</template>
 	<script>
-	Polymer.register(this, {
+	Polymer('x-righe', {
 		value: '',
 		valueChanged: function (){
 			//console.log(this.nodeName+' changed');
@@ -20,6 +20,6 @@
 		}
 	});
 	</script>
-</element>
+</polymer-element>
 
 
