--- a/components/x-data.html
+++ b/components/x-data.html
@@ -1,4 +1,4 @@
-<element name="x-data" attributes="value">
+<polymer-element name="x-data" attributes="value">
 	<template>
 		<label>
 			Data
@@ -6,13 +6,13 @@
 		</label>
 	</template>
 	<script>
-	Polymer.register(this, {
+	Polymer('x-data', {
 		value: new Date().toJSON().slice(0,10),
 		focus: function (){
 			this.webkitShadowRoot.querySelector('input').focus();
 		}
 	});
 	</script>
-</element>
+</polymer-element>
 
 
