--- a/components/x-spedizionedescrizione.html
+++ b/components/x-spedizionedescrizione.html
@@ -1,16 +1,16 @@
-<element name="x-spedizionedescrizione" attributes="value">
+<polymer-element name="x-spedizionedescrizione" attributes="value">
 	<template>
 		<label>
 			Descr.
-			<input type="text" value="{{value}}"  maxlength="5" size="5">
+			<input type="text" value="{{value}}"  maxlength="12" size="12">
 		</label>
 	</template>
 	<script>
-	Polymer.register(this, {
+	Polymer('x-spedizionedescrizione', {
 		value: '',
 		focus: function (){
 			this.webkitShadowRoot.querySelector('input').focus();
 		}
 	});
 	</script>
-</element>
+</polymer-element>
